--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "apexcharts": "^3.35.2",
     "firebase": "^9.6.11",
     "framer-motion": "^6.3.1",
+    "hamburger-react": "^2.5.0",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.0.0",
+    "react-intersection-observer": "^9.1.0",
+    "react-scroll-parallax": "^3.2.0",
+    "react-skillbars": "^2.0.1",
     "styled-components": "^5.3.5",
-    "tailwindcss-border-gradient-radius": "^3.0.1"
+    "tailwindcss-border-gradient-radius": "^3.0.1",
+    "three": "^0.140.0",
+    "vanta": "^0.5.22"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
